tarea terminada para revisión

--- a/index.html
+++ b/index.html
@@ -219,15 +219,15 @@
           <ul class="products-list">
             <li class="products-list-img">
               <img src="imagenes/Imagen1.jpg" alt="aplicaciones de escritorio"/>
-              <h3>aplicaciones de escritorio</h3>
+              <h3 class="title-product">aplicaciones de escritorio</h3>
             </li>
             <li class="products-list-img">
               <img src="./imagenes/Imagen2.jpg" alt="aplicaciones moviles" width: 373.16px; height: 323.7px; />
-              <h3>aplicaciones moviles</h3>
+              <h3 class="title-product">aplicaciones moviles</h3>
             </li>
             <li class="products-list-img">
               <img src="./imagenes/Imagen3.jpg" alt="soluciones de diseño" width: 373.16px; height:323.7px; />
-              <h3>soluciones de diseño</h3>
+              <h3 class="title-product">soluciones de diseño</h3>
             </li>
           </ul>
         </div>
@@ -401,57 +401,58 @@
       </section>
 
       <section class="section">
-        <h2 class="name-section">clientes regulares</h2>
-        <ul class="client-cont">
-          <li class="client-list">
-            <a href="" class="client-icon">                
+          <div class="container">
+          <h2 class="name-section">clientes regulares</h2>
+          <ul class="client-cont">
+            <li class="client-list">
+              <a href="" class="client-icon">                
+                <svg width="106px" height="52.83px">
+                <use href="./imagenes/icon.svg#icon-cliente1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-list">
+              <a href="" class="client-icon">                
               <svg width="106px" height="52.83px">
-              <use href="./imagenes/icon.svg#icon-cliente1"></use>
+                <use href="./imagenes/icon.svg#icon-cliente2" ></use>
               </svg>
-            </a>
-          </li>
-          <li class="client-list">
-            <a href="" class="client-icon">                
-            <svg width="106px" height="52.83px">
-              <use href="./imagenes/icon.svg#ICON-CLIENTE1" ></use>
-            </svg>
-            </a>
-          </li>
-          <li class="client-list">
-            <a href="" class="client-icon">                
-            <svg width="106px" height="52.83px">
-              <use href="./imagenes/icon.svg#icon-cliente3"></use>
-            </svg>
-            </a>
-          </li>
-          <li class="client-list">
-            <a href="" class="client-icon">                
-            <svg width="106px" height="52.83px">
-              <use href="./imagenes/icon.svg#icon-cliente4"></use>
-            </svg>
-            </a>
-          </li>
-          <li class="client-list">
-            <a href="" class="client-icon">                
-            <svg width="106px" height="52.83px">
-              <use href="./imagenes/icon.svg#icon-cliente5"></use>
-            </svg>
-            </a>
-          </li>
-          <li class="client-list">
-            <a href="" class="client-icon">                
-            <svg width="106px" height="52.83px">
-              <use href="./imagenes/icon.svg#icon-cliente6"></use>
-            </svg>
-            </a>
-          </li>
-        </ul>
+              </a>
+            </li>
+            <li class="client-list">
+              <a href="" class="client-icon">                
+              <svg width="106px" height="52.83px">
+                <use href="./imagenes/icon.svg#icon-cliente3"></use>
+              </svg>
+              </a>
+            </li>
+            <li class="client-list">
+              <a href="" class="client-icon">                
+              <svg width="106px" height="52.83px">
+                <use href="./imagenes/icon.svg#icon-cliente4"></use>
+              </svg>
+              </a>
+            </li>
+            <li class="client-list">
+              <a href="" class="client-icon">                
+              <svg width="106px" height="52.83px">
+                <use href="./imagenes/icon.svg#icon-cliente5"></use>
+              </svg>
+              </a>
+            </li>
+            <li class="client-list">
+              <a href="" class="client-icon">                
+              <svg width="106px" height="52.83px">
+                <use href="./imagenes/icon.svg#icon-cliente6"></use>
+              </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Pie de pagina -->
     <footer class="footer-contact">
       <div class="container cont-contact" >
-
         <a href="#" class="logo">WebStudio</a>
         <address>
           <ul class="footer-contact-list">
@@ -473,12 +474,11 @@
             </li>
           </ul>
         </address>
-
       </div>
 
       <div class="cont-social">
-
         <h3 class="title-footer">encuentranos en</h3>
+
         <!-------------------- redes sociales -------------------->
         <ul class="icon-nav">
           <li class="icon-footer">
@@ -490,27 +490,26 @@
           </li>
           <li class="icon-footer">
             <a href="" class="footer-media">                
-            <svg width="20px" height="20px">
-              <use href="./imagenes/icon.svg#icon-twitter" ></use>
-            </svg>
+              <svg width="20px" height="20px">
+                <use href="./imagenes/icon.svg#icon-twitter" ></use>
+              </svg>
             </a>
           </li>
           <li class="icon-footer">
             <a href="" class="footer-media">                
-            <svg width="20px" height="20px">
-              <use href="./imagenes/icon.svg#icon-facebook"></use>
-            </svg>
+              <svg width="20px" height="20px">
+                <use href="./imagenes/icon.svg#icon-facebook"></use>
+              </svg>
             </a>
           </li>
           <li class="icon-footer">
             <a href="" class="footer-media">                
-            <svg width="20px" height="20px">
-              <use href="./imagenes/icon.svg#icon-linkedin"></use>
-            </svg>
+              <svg width="20px" height="20px">
+                <use href="./imagenes/icon.svg#icon-linkedin"></use>
+              </svg>
             </a>
           </li>
         </ul>
-
       </div>
     </footer>
   </body>
