--- a/portafolio.html
+++ b/portafolio.html
@@ -74,6 +74,7 @@
           <!---------- Contenedor de imagenes ---------->
 
           <ul class="card-set">
+
             <li class="briefcase-list-item">
               <img src="./imagenes/imagenp1.jpg" 
                 alt="Tecnoduck"/>
@@ -81,8 +82,8 @@
                 <h2 class="briefcase-list-title">Tecnoduck</h2>
                 <p class="briefcase-list-text">Marketing</p>
               </div>
-
             </li>
+
             <li class="briefcase-list-item">
               <img
                 src="./imagenes/imagenp2.jpg"
@@ -93,6 +94,7 @@
                 <p class="briefcase-list-text">diseño</p>
               </div>
             </li>
+
             <li class="briefcase-list-item">
               <img
                 src="./imagenes/imagenp3 .jpg"
@@ -103,6 +105,7 @@
                 <p class="briefcase-list-text">Aplicaciones</p>
               </div>
             </li>
+
             <li class="briefcase-list-item">
               <img src="./imagenes/imagenp4.jpg" alt="Audifonos"/>
               <div class="text-cont-1">
@@ -110,6 +113,7 @@
                 <p class="briefcase-list-text">Marketing</p>
               </div>
             </li>
+
             <li class="briefcase-list-item">
               <img src="./imagenes/imagenp5.jpg" alt="Cajas"/>
               <div class="text-cont-1">
@@ -117,6 +121,7 @@
                 <p class="briefcase-list-text">Aplicaciones</p>
               </div>
             </li>
+
             <li class="briefcase-list-item">
               <img src="./imagenes/imagenp6.jpg" alt="Una pantalla"/>
               <div class="text-cont-1">
@@ -124,6 +129,7 @@
                 <p class="briefcase-list-text">Sitio-web</p>
               </div>
             </li>
+
             <li class="briefcase-list-item">
               <img
                 src="./imagenes/imagenp7.jpg"
@@ -134,6 +140,7 @@
                 <p class="briefcase-list-text">Diseño</p>
               </div>
             </li>
+
             <li class="briefcase-list-item">
               <img src="./imagenes/imagenp8.jpg" alt="Una etiqueta"/>
               <div class="text-cont-1">
@@ -141,6 +148,7 @@
                 <p class="briefcase-list-text">Marketing</p>
               </div>
             </li>
+
             <li class="briefcase-list-item">
               <img src="./imagenes/imagenp9.jpg" alt="Un portatil"/>
               <div class="text-cont-1">
@@ -148,13 +156,14 @@
                 <p class="briefcase-list-text">Aplicaciones</p>
               </div>
             </li>
+
           </ul>
         </div>
       </section>
     </main>
     <!-- Pie de pagina -->
-    <footer class="footer-contact cont">
-      <div class="container">
+    <footer class="footer-contact">
+      <div class="container cont-contact">
         <a href="#" class="logo">WebStudio</a>
         <address>
           <ul class="footer-contact-list">
@@ -176,6 +185,42 @@
             </li>
           </ul>
         </address>
+      </div>
+
+      <div class="cont-social">
+        <h3 class="title-footer">encuentranos en</h3>
+
+        <!-------------------- redes sociales -------------------->
+        <ul class="icon-nav">
+          <li class="icon-footer">
+            <a href="" class="footer-media">                
+              <svg width="20px" height="20px">
+              <use href="./imagenes/icon.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-footer">
+            <a href="" class="footer-media">                
+              <svg width="20px" height="20px">
+                <use href="./imagenes/icon.svg#icon-twitter" ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-footer">
+            <a href="" class="footer-media">                
+              <svg width="20px" height="20px">
+                <use href="./imagenes/icon.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-footer">
+            <a href="" class="footer-media">                
+              <svg width="20px" height="20px">
+                <use href="./imagenes/icon.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
