--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       <!-- seccion Nuestro equipo -->
       <section class="team section">
         <div class="container">
-          <h2 class="name-section">Nuestro equipo</h2>
+          <h2 class="name-section">nuestro equipo</h2>
           <ul class="team-list">
             <li class="team-list-img">
               <img class="images" src="./imagenes/Imagen4.jpg" alt="foto de perfil diseñador de productor"/>
@@ -399,7 +399,7 @@
           </ul>
         </div>
       </section>
-
+      <!-- seccion clientes regulares -->
       <section class="section">
           <div class="container">
           <h2 class="name-section">clientes regulares</h2>
