--- a/portafolio.html
+++ b/portafolio.html
@@ -32,10 +32,19 @@
         </nav>
         <ul class=" contact-list  ">
           <li class="contact-list-item">
-            <a href="mailto:info@devstudio.com " class=" link contact-list-link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com " class=" link contact-list-link mail">
+              <svg width="16px" height="12px">
+                <use href="./imagenes/icon.svg#icon-sobre"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
-          <li>
-            <a href="tel:+525555296000" class="link contact-list-link">+52 55 5529 6000</a>
+          <li class="contact-list-item">
+            <a href="tel:+525555296000" class="link contact-list-link mail">
+              <svg width="10px" height="16px">
+                <use href="./imagenes/icon.svg#icon-telfono-inteligente"></use>
+              </svg>+52 55 5529 6000
+            </a>
           </li>
         </ul>
       </div>
