--- a/portafolio.html
+++ b/portafolio.html
@@ -85,85 +85,93 @@
           <ul class="card-set">
 
             <li class="briefcase-list-item">
-              <img src="./imagenes/imagenp1.jpg" 
-                alt="Tecnoduck"/>
-              <div class="text-cont-1">
-                <h2 class="briefcase-list-title">Tecnoduck</h2>
-                <p class="briefcase-list-text">Marketing</p>
-              </div>
+              <a href="#">
+                <img src="./imagenes/imagenp1.jpg" alt="Tecnoduck"/>
+                <div class="text-cont-1">
+                  <h2 class="briefcase-list-title">Tecnoduck</h2>
+                  <p class="briefcase-list-text">Marketing</p>
+                </div>
+              </a>
             </li>
 
             <li class="briefcase-list-item">
-              <img
-                src="./imagenes/imagenp2.jpg"
-                alt="Póster de Nueva Orleans vs Estrella Dorada"
-              />
-              <div class="text-cont-1">
-                <h2 class="briefcase-list-title">Póster de Nueva Orleans vs Estrella Dorada</h2>
-                <p class="briefcase-list-text">diseño</p>
-              </div>
+              <a href="#">
+                <img src="./imagenes/imagenp2.jpg" alt="Póster de Nueva Orleans vs Estrella Dorada"/>
+                <div class="text-cont-1">
+                  <h2 class="briefcase-list-title">Póster de Nueva Orleans vs Estrella Dorada</h2>
+                  <p class="briefcase-list-text">diseño</p>
+                </div>
+              </a>
             </li>
 
             <li class="briefcase-list-item">
-              <img
-                src="./imagenes/imagenp3 .jpg"
-                alt="Restaurante Seafood"
-              />
-              <div class="text-cont-1">
-                <h2 class="briefcase-list-title">Restaurante Seafood</h2>
-                <p class="briefcase-list-text">Aplicaciones</p>
-              </div>
+              <a href="#">
+                <img src="./imagenes/imagenp3 .jpg" alt="Restaurante Seafood"/>
+                <div class="text-cont-1">
+                  <h2 class="briefcase-list-title">Restaurante Seafood</h2>
+                  <p class="briefcase-list-text">Aplicaciones</p>
+                </div>
+              </a> 
             </li>
 
             <li class="briefcase-list-item">
-              <img src="./imagenes/imagenp4.jpg" alt="Audifonos"/>
-              <div class="text-cont-1">
-                <h2 class="briefcase-list-title">Proyecto Prime</h2>
-                <p class="briefcase-list-text">Marketing</p>
-              </div>
+              <a href="#">
+                <img src="./imagenes/imagenp4.jpg" alt="Audifonos"/>
+                <div class="text-cont-1">
+                  <h2 class="briefcase-list-title">Proyecto Prime</h2>
+                  <p class="briefcase-list-text">Marketing</p>
+                </div>
+              </a>  
             </li>
 
             <li class="briefcase-list-item">
-              <img src="./imagenes/imagenp5.jpg" alt="Cajas"/>
-              <div class="text-cont-1">
-                <h2 class="briefcase-list-title">Proyecto Cajas</h2>
-                <p class="briefcase-list-text">Aplicaciones</p>
-              </div>
+              <a href="#">
+                <img src="./imagenes/imagenp5.jpg" alt="Cajas"/>
+                <div class="text-cont-1">
+                  <h2 class="briefcase-list-title">Proyecto Cajas</h2>
+                  <p class="briefcase-list-text">Aplicaciones</p>
+                </div>
+              </a>
             </li>
 
             <li class="briefcase-list-item">
-              <img src="./imagenes/imagenp6.jpg" alt="Una pantalla"/>
-              <div class="text-cont-1">
-                <h2 class="briefcase-list-title">La inspiración no tiene límites</h2>
-                <p class="briefcase-list-text">Sitio-web</p>
-              </div>
+              <a href="#">
+                <img src="./imagenes/imagenp6.jpg" alt="Una pantalla"/>
+                <div class="text-cont-1">
+                  <h2 class="briefcase-list-title">La inspiración no tiene límites</h2>
+                  <p class="briefcase-list-text">Sitio-web</p>
+                </div>
+            </a> 
             </li>
 
             <li class="briefcase-list-item">
-              <img
-                src="./imagenes/imagenp7.jpg"
-                alt="Un libro abierto"
-              />
-              <div class="text-cont-1">
-                <h2 class="briefcase-list-title">Edición Limitada</h2>
-                <p class="briefcase-list-text">Diseño</p>
-              </div>
+              <a href="#">
+                <img src="./imagenes/imagenp7.jpg" alt="Un libro abierto"/>
+                <div class="text-cont-1">
+                  <h2 class="briefcase-list-title">Edición Limitada</h2>
+                  <p class="briefcase-list-text">Diseño</p>
+                </div>
+              </a> 
             </li>
 
             <li class="briefcase-list-item">
-              <img src="./imagenes/imagenp8.jpg" alt="Una etiqueta"/>
-              <div class="text-cont-1">
-                <h2 class="briefcase-list-title">Proyecto LAB</h2>
-                <p class="briefcase-list-text">Marketing</p>
-              </div>
+              <a href="#">
+                <img src="./imagenes/imagenp8.jpg" alt="Una etiqueta"/>
+                <div class="text-cont-1">
+                  <h2 class="briefcase-list-title">Proyecto LAB</h2>
+                  <p class="briefcase-list-text">Marketing</p>
+                </div>
+              </a>
             </li>
 
             <li class="briefcase-list-item">
-              <img src="./imagenes/imagenp9.jpg" alt="Un portatil"/>
-              <div class="text-cont-1">
-                <h2 class="briefcase-list-title">Negocio en Crecimiento</h2>
-                <p class="briefcase-list-text">Aplicaciones</p>
-              </div>
+              <a href="#">              
+                <img src="./imagenes/imagenp9.jpg" alt="Un portatil"/>
+                <div class="text-cont-1">
+                  <h2 class="briefcase-list-title">Negocio en Crecimiento</h2>
+                  <p class="briefcase-list-text">Aplicaciones</p>
+                </div>
+              </a>
             </li>
 
           </ul>
